Remove some BR, fix spacing

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -160,7 +160,3 @@ section + section {
   padding: 0 0 0 15px;
     white-space: nowrap;
 }
-
-.shell-body span {
-    white-space: nowrap;
-}
